OPA-Testing/fake-service-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: *name # Modify this line with the service name
  labels:
    app: *name # Modify this line with the service name
    service: *name # Modify this line with the service name
spec:
  ports:
  - port: *port # Modify this line with the listening port
    name: http
  selector:
    app: *name # Modify this line with the service name
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: *name # Modify this line with the service name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: *name # Modify this line with the service name
  template:
    metadata:
      labels:
        app: *name # Modify this line with the service name
    spec:
      terminationGracePeriodSeconds: 0
      serviceAccountName: # Modify this line with the service name
      containers:
      - name: # Modify this line with the service name
        image: nicholasjackson/fake-service:v0.24.2
        imagePullPolicy: IfNotPresent
