OPA-Testing/fake-service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: fs1 # Modify this line with the service name
  labels:
    app: fs1 # Modify this line with the service name
    service: fs1 # Modify this line with the service name
spec:
  type: NodePort
  ports:
  - port: 80 # Modify this line with the listening port number
    targetPort: 80 # Modify this line with the listening port number
    nodePort: 30007 # Leave this line as is so that we can make requests to the first service outside of Istio pods
    name: http
  selector:
    app: fs1 # Modify this line with the service name
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fs1 # Modify this line with the service name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fs1 # Modify this line with the service name
  template:
    metadata:
      labels:
        app: fs1 # Modify this line with the service name
    spec:
      terminationGracePeriodSeconds: 0
      serviceAccountName: fs1 # Modify this line with the service name
      containers:
      - name: fake-service1 # Modify this line with the service name
        image: nicholasjackson/fake-service:v0.24.2
        imagePullPolicy: IfNotPresent
