OPA-Testing/envFilter-template.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: {name}-headers-in # Modify this line with a unique name for the target service
  namespace: default
spec:
  workloadSelector:
    labels:
      app: {name} # Modify this line with the service name
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_FIRST
      value:
        name: envoy.lua
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
          inlineCode: |
            function envoy_on_request(request_handle)
              sources = request_handle:headers():get("sources") or ""
              tokens = request_handle:headers():get("tokens") or ""
              request_handle:logWarn("= RECVD: srcs: "..sources.." tokens: "..tokens.." =")

              local bSources = enc("{name}")
              local bSrcs = enc(sources)

              local bTokens = enc("{name}")
              local bToks = enc(tokens)

              local headers, body = request_handle:httpCall("outbound|2379||etcd.default.svc.cluster.local", {
                [":method"] = "POST",
                [":path"] = "/v3/kv/put",
                [":authority"] = "{name}",
              }, '{"key": "'..bSources..'", "value": "'..bSrcs..'"}', 300000)

              local headers, body = request_handle:httpCall("outbound|2379||etcd.default.svc.cluster.local", {
                [":method"] = "POST",
                [":path"] = "/v3/kv/put",
                [":authority"] = "{name}",
              }, '{"key": "'..bTokens..'", "value": "'..bToks..'"}', 300000)

            end

            function envoy_on_response(response_handle)
            end

            local b='ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/' -- You will need this for encoding/decoding
            -- encoding
            function enc(data)
                return ((data:gsub('.', function(x)
                    local r,b='',x:byte()
                    for i=8,1,-1 do r=r..(b%2^i-b%2^(i-1)>0 and '1' or '0') end
                    return r;
                end)..'0000'):gsub('%d%d%d?%d?%d?%d?', function(x)
                    if (#x < 6) then return '' end
                    local c=0
                    for i=1,6 do c=c+(x:sub(i,i)=='1' and 2^(6-i) or 0) end
                    return b:sub(c+1,c+1)
                end)..({ '', '==', '=' })[#data%3+1])
            end

            -- decoding
            function dec(data)
                data = string.gsub(data, '[^'..b..'=]', '')
                return (data:gsub('.', function(x)
                    if (x == '=') then return '' end
                    local r,f='',(b:find(x)-1)
                    for i=6,1,-1 do r=r..(f%2^i-f%2^(i-1)>0 and '1' or '0') end
                    return r;
                end):gsub('%d%d%d?%d?%d?%d?%d?%d?', function(x)
                    if (#x ~= 8) then return '' end
                    local c=0
                    for i=1,8 do c=c+(x:sub(i,i)=='1' and 2^(8-i) or 0) end
                        return string.char(c)
                end))
            end
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: {name}-headers-out # Modify this line with a unique name for the target service
  namespace: default
spec:
  workloadSelector:
    labels:
      app: {name} # Modify this line with the service name
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_FIRST
      value:
        name: envoy.lua
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
          inlineCode: |
            function envoy_on_request(request_handle)
              sources = request_handle:headers():get("sources") or ""
              tokens = request_handle:headers():get("tokens") or ""

              local bSources = enc("{name}")
              local bTokens = enc("{name}")

              local headers, body = request_handle:httpCall("outbound|2379||etcd.default.svc.cluster.local", {
                [":method"] = "POST",
                [":path"] = "/v3/kv/range",
                [":authority"] = "{name}",
              }, '{"key": "'..bSources..'"}', 300000)
              local vInd = string.find(body, 'value', 1, true)
              local cInd = string.find(body, 'count', 1, true)
              local srcVal = dec(string.sub(body, vInd+8, cInd-6))

              local headers, body = request_handle:httpCall("outbound|2379||etcd.default.svc.cluster.local", {
                [":method"] = "POST",
                [":path"] = "/v3/kv/range",
                [":authority"] = "{name}",
              }, '{"key": "'..bTokens..'"}', 300000)
              local vInd = string.find(body, 'value', 1, true)
              local cInd = string.find(body, 'count', 1, true)
              srcTok = dec(string.sub(body, vInd+8, cInd-6))

              request_handle:headers():replace("sources", srcVal..",{name}")
              request_handle:headers():replace("tokens", srcTok..",{token}")

              local sources = request_handle:headers():get("sources")
              local tokens = request_handle:headers():get("tokens")
              request_handle:logWarn("= SENT srcs: "..sources.." tokens: "..tokens.." =")
            end

            function envoy_on_response(response_handle)
            end

            local b='ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/' -- You will need this for encoding/decoding
            -- encoding
            function enc(data)
                return ((data:gsub('.', function(x)
                    local r,b='',x:byte()
                    for i=8,1,-1 do r=r..(b%2^i-b%2^(i-1)>0 and '1' or '0') end
                    return r;
                end)..'0000'):gsub('%d%d%d?%d?%d?%d?', function(x)
                    if (#x < 6) then return '' end
                    local c=0
                    for i=1,6 do c=c+(x:sub(i,i)=='1' and 2^(6-i) or 0) end
                    return b:sub(c+1,c+1)
                end)..({ '', '==', '=' })[#data%3+1])
            end

            -- decoding
            function dec(data)
                data = string.gsub(data, '[^'..b..'=]', '')
                return (data:gsub('.', function(x)
                    if (x == '=') then return '' end
                    local r,f='',(b:find(x)-1)
                    for i=6,1,-1 do r=r..(f%2^i-f%2^(i-1)>0 and '1' or '0') end
                    return r;
                end):gsub('%d%d%d?%d?%d?%d?%d?%d?', function(x)
                    if (#x ~= 8) then return '' end
                    local c=0
                    for i=1,8 do c=c+(x:sub(i,i)=='1' and 2^(8-i) or 0) end
                        return string.char(c)
                end))
            end
