OPA-Testing/envFilter.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: fs1-headers # Modify this line with a unique name for the target service
  namespace: default
spec:
  configPatches:
  - applyTo: ROUTE_CONFIGURATION
    match:
      context: SIDECAR_OUTBOUND
    patch:
      operation: MERGE
      value:
        request_headers_to_add:
          - header:
              key: 'tokens'
              value: 'token1' # Modify this line with the token for selected service
            append: true
          - header:
              key: 'sources'
              value: 'fs1' # Modify this line with the service name
            append: true
  workloadSelector:
    labels:
      app: fs1 # Modify this line with the service name
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: fs2-headers # Modify this line with a unique name for the target service
  namespace: default
spec:
  configPatches:
  - applyTo: ROUTE_CONFIGURATION
    match:
      context: SIDECAR_OUTBOUND
    patch:
      operation: MERGE
      value:
        request_headers_to_add:
          - header:
              key: 'tokens'
              value: 'token2' # Modify this line with the token for selected service
            append: true
          - header:
              key: 'sources'
              value: 'fs2' # Modify this line with the service name
            append: true
  workloadSelector:
    labels:
      app: fs2 # Modify this line with the service name
