OPA-Testing/istAuthzPolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: fs-opa
spec:
  action: CUSTOM
  provider:
    name: "opa.default"
  rules:
  - to:
    - operation:
        methods: ["GET"]
